[package]
name = "actix-diesel"
description = "Integrate Diesel into Actix (and Actix Web) cleanly and efficiently."
repository = "https://github.com/mehcode/actix-diesel"
license = "MIT/Apache-2.0"
version = "0.3.1-alpha.0"
keywords = ["web", "actix", "async", "diesel", "database"]
categories = ["asynchronous", "web-programming::http-server", "database"]
readme = "README.md"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.25"
actix = "0.13.0"

diesel = { version = "2.0.2", features = [ "r2d2" ] }
r2d2 = "0.8.3"

thiserror = "1.0.37"
num_cpus = "1.9.0"
once_cell = "1.16.0"



#actix-web = { version = "0.7.18", optional = true }
#failure = { version = "0.1.5", optional = true }
